[package]
name = "join-lazy-fmt"
version = "0.9.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

documentation = "https://docs.rs/iter-python/"
homepage = "https://github.com/danielhenrymantilla/iter-python-rs"
repository = "https://github.com/danielhenrymantilla/iter-python-rs"

description = "Lazy `separator.join(iterable)` method and `lazy_format!` for Rust"
keywords = ["join", "lazy", "format", "iterator", "human"]
categories = ["rust-patterns", ]
readme = "README.md"
license = "MIT"
[dependencies]

[features]
default = []

nightly = []

[package.metadata.docs.rs]
features = ["nightly", ]
